grammar.js
        source_file: $ => repeat(seq($.statement, optional(';'))),

        /* top_level_declarations: $ => choice(
            $.procedure_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.static_if_statement,

            $.run_statement,
            $.compiler_directive,

            $.using_statement,
            $.module_parameters,
            seq($.compiler_directive, $.string),
            seq($.declarations_that_require_a_semicolon, ';'),
        ), */

        declarations_that_require_a_semicolon: $ => choice(
            $.module_parameters,
            $.assert_statement,
            $.placeholder_declaration,
            $.const_declaration,
            $.variable_declaration,
            $.import,
            $.load,
            $.call_expression, // this could be a macro call in global scope.
        ),

        // In procedure scopes
        statement: $ => choice(
            seq($.all_statements, ';'),
            $.statements_that_dont_require_a_semicolon,
            prec(-2, ';'),
        ),

        block: $ => prec(2, seq(
            '{',
            repeat($.statement),
            '}',
        )),

        compiler_directive: $ => prec.left(choice(
            field('directive', seq('#', comma_sep1($.identifier)))
        )),

        procedure_declaration: $ => prec(1, seq(
            field('name', choice(
                $.identifier,
                seq(
                    'operator',
                    // I forgor which operators can be overloaded, lol
                    choice(
                        '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', 
                        '+',  '-',  '*',  '/',  '%',  '&',  '|',  '^',
                        '<<', '>>', '||', '&&', '<<<', '>>>',
                        '<<=', '>>=', '||=', '&&=', '<<<=', '>>>=',
                        '==', '!=', '~', '&~', '>', '>=', '<=', '<',
                        '[]', '[]=', '*[]', '!',
                    )
                )
            )),
            ':', ':',
            optional(field('modifier', choice('inline', 'no_inline'))),
            $.procedure,
            optional($.modify_block),
            choice($.block, ';'),
        )),

        struct_declaration: $ => seq(
            field('name', $.identifier),
            ':', ':',
            $.struct_or_union,
        ),

        struct_or_union: $ => seq(
            choice('struct', 'union'),
            optional($.compiler_directive),
            optional($.tagged_union_kind),
            // Parameterized structs
            field('modifier', optional($.named_parameters)),
            optional($.modify_block),
            $.struct_or_union_block,
        ),

        struct_or_union_block: $ => prec.left(seq(
            '{',
            optional(repeat(choice(
                alias(field('directive', '#as'), $.compiler_directive),
                $.run_or_insert_expression,
                $.run_statement,
                $.procedure_declaration,
                $.struct_declaration,
                $.enum_declaration,
                $.no_semicolon_declaration,
                $.struct_or_union,
                $.static_if_statement,
                $.using_statement,
                $.tagged_union_binding,
                ';',
                seq(
                    choice(
                        $.insert_statement,
                        $.const_declaration,
                        $.assignment_statement,
                        $.variable_declaration,
                        $.place_directive,
                    ),
                    optional($.align_directive),
                    ';'
                ),
            ))),
            '}',
        )),

        align_directive: $ => seq(alias(field('directive', '#align'), $.compiler_directive), $.expressions),

        variable_declaration: $ => seq(
            prec.right(field('name', comma_sep1($.identifier))),
            // optional(','),
            ':',
            choice(
                seq(
                    optional(field('type', $.types)),
                    '=',
                    prec.right(comma_sep1(choice($.expressions, $.procedure, $.types))),
                ),
                field('type', $.types),
            )
        ),

        const_declaration: $ => seq(
            prec.right(field('name', comma_sep1($.identifier))),
            // optional(','),
            ':',
            optional(field('type', $.types)),
            ':',
            prec.right(comma_sep1(
                choice($.expressions, $.types),
            )),
            // optional(','),
        ),

        using_statement: $ => prec.left(PREC.CAST, seq(
            field('keyword', 'using'),
            field('modifier', optional(seq(',', comma_sep1(
                choice(
                    $.identifier,
                    seq('except', $.assignment_parameters)
                )
            )))),
            $.statement,
        )),

        unary_expression: $ => prec.left(PREC.UNARY, seq(
            field('operator', choice('+', '-', '~', '!', '&')),
            field('argument', $.expressions),
        )),

        procedure: $ => prec.right(PREC.CALL, seq(
            // 'assignment_parameters' is only valid for procedure types, not for procedure
            // declarations, but I don't feel like having 2 of these.
            choice ($.assignment_parameters, $.named_parameters),
            optional(seq(
                '->',
                field('result', $.procedure_returns)
            )),
            field('modifier', repeat(
                prec.right(2, seq(
                    $.compiler_directive,
                    optional(choice($.identifier, $.string))
                ))
            )),
        )),

        procedure_returns: $ => prec.left(choice(
            // This is a procedure that returns nothing: () -> ()
            // This is a procedure that returns a procedure; () -> (())
            seq(
                '(',
                sep(
                    $.returns, ','
                ),
                ')'
            ),
            prec.right(sep1($.returns, ',')),
        )),

        returns: $ => prec.left(1, seq(
            choice(
                // This is gross.
                $.parameterized_struct_type,
                $.named_return,
                $.types,
                $.identifier_type,
                $.member_type_in_procedure_returns,
            ),
            optional(alias("#must", $.compiler_directive))
        )),

        // I hate writing tree-sitter parsers so bad rn...
        member_type_in_procedure_returns: $ => prec.left(999, field('type',
            seq(
                choice(
                    $.member_type_in_procedure_returns,
                    $.identifier,
                ),
                '.',
                $.identifier
            )
        )),

        identifier_type: $ => field('type', $.identifier),

        named_return: $ => seq(
            // This here should be a regular variable declaration (where "name := value" is valid too),
            // but it seems to work without having the 'types' be optional. I don't want to change it
            // because 'variable_declaration' is also a compound declaration, which would not work here.
            $.identifier,
            ':',
            $.types,
            optional(seq('=', $.literal))
        ),

        // Procedure and Struct
        named_parameters: $ => seq(
            '(',
            field('parameters', optional(seq(
                comma_sep1(prec(1, choice($.parameter, $.types))),
                // optional(','),
            ))),
            ')'
        ),

        parameter: $ => seq(
            optional($.compiler_directive),
            field('keyword', optional('using')),
            field('name', seq(
                optional('$'),
                optional('$'),
                $.identifier
            )),
            ':',
            choice(
                field('type', seq(
                    optional('..'),
                    $.types
                )),
                seq(
                    field('type', optional(seq(
                        optional('..'),
                        $.types
                    ))),
                    seq(
                        '=',
                        field('default_value', choice(
                            $.expressions,
                            $.types,
                            $.compiler_directive,
                        ))
                    )
                ),
            ),
        ),

        assignment_parameters: $ => seq(
            '(',
            // TODO: this can surely be simplified
            optional(seq(
                sep1_prec_right(PREC.CALL, optional(seq(
                    // Named arguments
                    //  procedure(arg2 = 2);

                    field('named_argument',
                        optional(seq(
                            $.identifier,
                            '='
                        ))
                    ),
                    optional('..'),
                    field('argument', choice(
                        $.expressions,
                        $.identifier,
                        $.procedure,
                        $.types,
                    )),
                )), ','),
                // optional(','),
            )),
            ')',
        ),

        // Enum declaration
        types: $ => prec(2, choice(
            $.pointer_type,
            $.anonymous_struct_type,
            $.anonymous_enum_type,
            $.array_type,
            $.type_of_expression,
            $.type_literal,
            $.procedure,
            $.parameterized_struct_type,
            $.polymorphic_type,
            $.member_type,
            prec(-2, $.identifier),
        )),

        // Same precedence as the bare identifier in 'types' above
        // After an identifier, a '.' is ambiguous with only one token of lookahead:
        //   []Foo.{}    the '.' opens a struct literal, so the type ends at Foo
        //   []Foo.Bar   the '.' continues the type
		// This will result in this case becoming a conflict, which will be resolved
        parameterized_struct_type: $ => prec.dynamic(PREC.CALL - 1, seq(
            field('type', $.identifier),
            $.assignment_parameters,
        )),

        pointer_type: $ => prec.left(PREC.CAST, seq('*', choice($.types, $.compiler_directive))),

        array_type: $ => prec.left(seq(
            '[',
            optional(seq(choice('..', $.expressions))),
            ']',
            optional(field('type', $.types)),
        )),

        //
        // literals
        //

        struct_literal: $ => prec.left(PREC.CALL, seq(
            optional(
                prec.left(choice(
                    seq('(', field('type', $.types), ')'),
                    field('type', $.types),
                    field('type', $.identifier),
                )),
            ),
            optional(field('parameters', $.named_parameters)),

            '.',
            '{',
            optional(seq(
                comma_sep1(field('parameter', seq(
                    optional(seq(field('name',
                        choice(
                            $.identifier,
                            $.index_expression, // maybe there are more cases like this
                            $.member_expression // support cases like foo.bar = ...
                        )
                    ), '=')), // named
                    $.expressions,
                ))),
                optional(','),
            )),
            '}',
        )),

        char_string: $ => prec.left(seq(
            field('modifier', '#char'),
            $.string
        )),

        string: $ => prec(2, seq(
            choice(token('"'), token('"//')), // I hate this...
            repeat($.string_contents),
            token('"'),
        )),

        string_contents: $ => prec(2, choice(
            prec(2, /\s/), // This is so comments don't match inside a string.
            // prec(2, '/'),
            prec(2, '//'),
            // prec(2, token('/')),
            prec(2, token('//')),
            prec(2, token('/*')),
            $.string_content,
            $.escape_sequence,
        )),

        string_content: _ => prec(2, token(/[^"\\\n]+/)),

        identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

        integer: _ =>
            choice(
                token(seq('0', choice("b", "B"), optional('_'), BIN_INT)),
                token(seq('0', choice("o", "O"), optional('_'), OCT_INT)),
                token(seq('0', choice("x", "X"), optional('_'), HEX_INT)),
                token(DEC_INT),
            ),

        float: _ =>
            choice(
                // Floats in hex
                token(seq(choice("0h", "0H"), HEX_INT)),
                token(seq(
                    choice("0x", "0h"), HEX_INT, ".", HEX_INT,
                    optional(seq(/[pP][-+]?/, DEC_INT))
                )),
                token(seq(
                    seq(optional(DEC_INT), ".", DEC_INT),
                    optional(seq(/[eE][-+]?/, DEC_INT))
                )),
                // floats with no decimal break other parts of the syntax.
                // TODO: find a way to add them without breaking shit
                // seq(DEC_INT, ".", optional(DEC_INT)),
                token(seq(
                    choice("0x", "0X"), HEX_INT, /[pP][-+]?/, DEC_INT
                )),
                token(seq(DEC_INT, /[eE][-+]?/, DEC_INT))
            ),

        // extras
